feat: Services section created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ body {
   --color-neutral300: #5B6477;
   --color-neutral500: #404A60;
   --color-neutral200: #6A7283;
-  --color-neutral400: #DFE0E4;
+  --color-neutral400: #4F586D;
 
 
   --radius-sm: calc(var(--radius) - 4px);
