--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,16 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @custom-variant dark (&:is(.dark *));
+@font-face {
+  font-family: "Product Sans";
+  src: url("/fonts/ProductSans-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+.download-button {
+  font-family: "Product Sans", sans-serif;
+}
 
 body {
   font-family: Exo;
@@ -23,6 +33,7 @@ body {
   transform: rotate(-180deg);
   display: 0;
 }
+
 
 @theme inline {
   --color-color-primary: var(--color-primary);
