--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,8 +33,15 @@ body {
   transform: rotate(-180deg);
   display: 0;
 }
+.transition-ease-in-out{
+  transition: all;
+  transition-duration: 300ms;
+  animation: ease-in-out;
+}
+
 
 @theme inline {
+  /* custom colors  */
   --color-color-primary: var(--color-primary);
   --color-color-secondary: var(--color-secondary);
   --color-neutral: var(--neutral);
@@ -57,6 +64,8 @@ body {
   --color-neutral200: #6a7283;
   --color-neutral400: #4f586d;
   --color-neutral600: #343e56;
+  --color-neutral700: #222e48;
+  /* custom colors  */
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -90,6 +99,7 @@ body {
 }
 
 :root {
+  /* custom color variables  */
   --color-primary: #1c1d20;
   --color-secondary: #262629;
   --primary: #e52621;
@@ -103,6 +113,7 @@ body {
   --neutral-secondary: #6a7283;
   --border: #6b7280;
   --N200: #6a7283;
+  /* custom color variables  */
 
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -133,6 +144,7 @@ body {
 }
 
 .dark {
+  /* custom color variables  */
   --color-primary: #1c1d20;
   --color-secondary: #262629;
   --primary: #e52621;
@@ -146,6 +158,7 @@ body {
   --neutral-secondary: #6a7283;
   --border: #6b7280;
   --N200: #6a7283;
+  /* custom color variables  */
 
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
