feat: Freelancers story section added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,6 +58,7 @@ body {
   --color-neutral30: #ebecef;
   --color-neutral40: #dfe0e4;
   --color-neutral50: #c1c4cc;
+  --color-neutral80: #979CA8;
   --color-neutral90: #888e9c;
   --color-neutral100: #798090;
   --color-neutral300: #5b6477;
